<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            tools:text="@string/authen" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="311dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="55dp"
            android:layout_height="23dp"
            android:text="@string/user"
            tools:layout_editor_absoluteX="78dp"
            tools:layout_editor_absoluteY="272dp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="235dp"
            android:layout_height="42dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="154dp"
            tools:layout_editor_absoluteY="264dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="91dp"
            android:layout_height="19dp"
            android:text="@string/pass"
            tools:layout_editor_absoluteX="47dp"
            tools:layout_editor_absoluteY="13dp" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="234dp"
            android:layout_height="43dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="154dp"
            tools:layout_editor_absoluteY="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:text="@string/log"
            tools:layout_editor_absoluteX="69dp"
            tools:layout_editor_absoluteY="16dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:onClick="on_register_click"
            android:text="@string/reg"
            tools:layout_editor_absoluteX="231dp"
            tools:layout_editor_absoluteY="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="111dp">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="32dp"
            android:layout_height="35dp"
            tools:layout_editor_absoluteX="189dp"
            tools:layout_editor_absoluteY="-1dp"
            tools:text="@string/save" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="36dp"
            android:layout_height="20dp"
            android:text="TextView"
            tools:layout_editor_absoluteX="189dp"
            tools:layout_editor_absoluteY="35dp"
            tools:text="@string/save" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>