<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/registration" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reg_"
        android:layout_width="match_parent"
        android:layout_height="311dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="76dp"
            android:layout_height="18dp"
            android:text="TextView"
            tools:layout_editor_absoluteX="88dp"
            tools:layout_editor_absoluteY="277dp"
            tools:text="@string/user" />

        <EditText
            android:id="@+id/reg_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="262dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="10dp" />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <Button
            android:id="@+id/button3"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:onClick="onOk_click"
            android:text="@string/cancel"
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="11dp"
            tools:text="@string/ok" />

        <Button
            android:id="@+id/button4"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:onClick="onCancel_click"
            android:text="@string/cancel"
            tools:layout_editor_absoluteX="226dp"
            tools:layout_editor_absoluteY="11dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>